--- a/index.html
+++ b/index.html
@@ -53,23 +53,6 @@
         </button>
       </div>
       <nav id="nav">
-        <!-- <div class="slider-content">
-          <div class="slider-item">
-            <img src="./ass/img/Design.jpg" alt="" />
-          </div>
-          <div class="slider-item">
-            <img src="./ass/img/Digital.jpg" alt="" />
-          </div>
-          <div class="slider-item">
-            <img src="./ass/img/System.jpg" alt="" />
-          </div>
-          <div class="slider-item">
-            <img src="./ass/img/Programming.jpg" alt="" />
-          </div>
-          <div class="slider-item">
-            <img src="./ass/img/3d_1.jpg" alt="" />
-          </div>
-        </div> -->
         <div class="navigation">
           <ul>
             <li>Akademiya</li>
@@ -171,7 +154,7 @@
               <div class="col-6">
                 <div class="bes">
                   <div class="img-bes">
-                    <img src="/ass/img/1_1.jpg" alt="" />
+                    <img src="./ass/img/1_1.jpg" alt="" />
                   </div>
                 </div>
                 <div class="yeddi">
@@ -189,7 +172,7 @@
               <div class="col-6">
                 <div class="bes">
                   <div class="img-bes">
-                    <img src="/ass/img/001.jpg" alt="" />
+                    <img src="./ass/img/001.jpg" alt="" />
                   </div>
                 </div>
                 <div class="yeddi">
@@ -206,7 +189,7 @@
               <div class="col-6">
                 <div class="bes">
                   <div class="img-bes">
-                    <img src="/ass/img/IMG_7180_D0SeHuD.jpg" alt="" />
+                    <img src="./ass/img/IMG_7180_D0SeHuD.jpg" alt="" />
                   </div>
                 </div>
                 <div class="yeddi">
@@ -223,7 +206,7 @@
               <div class="col-6">
                 <div class="bes">
                   <div class="img-bes">
-                    <img src="/ass/img/IMG_7714_1.jpg" alt="" />
+                    <img src="./ass/img/IMG_7714_1.jpg" alt="" />
                   </div>
                 </div>
                 <div class="yeddi">
@@ -238,118 +221,6 @@
             </a>
           </div>
         </div>
-
-        <!-- <div class="row">
-          <div class="col-66">
-            <a href="#">
-              <div class="row-items">
-                <div class="row">
-                  <div class="col-5">
-                    <img
-                      src="./ass/img/1_1.jpg"
-                      alt="Beynəlxalq Sertifikasiya"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="col-7">
-                    <div class="content">
-                      <h2>Beynəlxalq Sertifikasiya</h2>
-                      <p class="regular">
-                        Microsoft Imagine Academy, Autodesk və Digital Marketing
-                        Institute-un Azərbaycandakı eksklüziv partnyoru
-                        olmaqlaMicrosoft Imagine
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div> -->
-
-        <!-- <div class="row">
-          <div class="col-66">
-            <a href="#">
-              <div class="row-items">
-                <div class="row">
-                  <div class="col-5">
-                    <img
-                      src="./ass/img/001.jpg"
-                      alt="Beynəlxalq Sertifikasiya"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="col-7">
-                    <div class="content">
-                      <h2>Zəmanətli Təhsil Sistemi</h2>
-                      <p class="regular">
-                        Seçdiyiniz tədrisə tamamilə fərqli sahədən gələ və ya
-                        sıfırdan başlaya bilərsiniz. Bunun üçün isə zəmanət
-                        lazımdır.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-66">
-            <a href="#">
-              <div class="row-items">
-                <div class="row">
-                  <div class="col-5">
-                    <img
-                      src="./ass/img/IMG_7180_D0SeHuD.jpg"
-                      alt="Beynəlxalq Sertifikasiya"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="col-7">
-                    <div class="content">
-                      <h2>Mentor Sistemi</h2>
-                      <p class="regular">
-                        Mentor Sistemi Code Academy-də tələbələrin təhsildə
-                        öyrəndiklərini təkrar etmələrini və gücləndirmələrini
-                        təmin edən xüsusi bir sistemdir.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-66">
-            <a href="#">
-              <div class="row-items">
-                <div class="row">
-                  <div class="col-5">
-                    <img
-                      src="./ass/img/IMG_7714_1.jpg"
-                      alt="Beynəlxalq Sertifikasiya"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="col-7">
-                    <div class="content">
-                      <h2>Talant Mərkəzi</h2>
-                      <p class="regular">
-                        Talant Mərkəzi məzunların potensialına uyğun işlə təmin
-                        olunması üçün Code Academy-nin nəzdində yaradılan bir
-                        bölmədir.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div> -->
       </section>
       <!-- WHYCODE SECTION END -->
 
@@ -371,21 +242,21 @@
           <div class="col-4">
             <a href="#">
               <div class="autodesk">
-                <img src="/ass/img/Autodesk.new.jpg" alt="" />
+                <img src="./ass/img/Autodesk.new.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-4">
             <a href="#">
               <div class="autodesk">
-                <img src="/ass/img/Microsoft-logo-2.jpg" alt="" />
+                <img src="./ass/img/Microsoft-logo-2.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-4">
             <div class="autodesk">
               <a href="">
-                <img src="/ass/img/microsoft.new.jpg" alt="" />
+                <img src="./ass/img/microsoft.new.jpg" alt="" />
               </a>
             </div>
           </div>
